tests-integration/tests/roundtrip/invalid/semantic/typecheck/bool_in_arith_list/bool_in_arith_list.essence
find b: bool
find x: int(1..10)
such that sum([1, 2, b, 4]) = x